completed database, fixed spacing on text containers

--- a/client/styles.css
+++ b/client/styles.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
 
 header {
@@ -38,32 +39,37 @@ header {
 }
 
 section {
-    position: absolute;
-    margin-right: 250px;
-    left: 250px;
-    top: 150px;
-    padding: 50px;
-    display: flex;
-    flex-direction: column;
+  position: absolute;
+  margin-right: 250px;
+  left: 250px;
+  top: 150px;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
 }
 
 section > div {
-    margin: 25px 0;
+  margin: 25px 0;
 }
 
-#about-text{
-    margin: 25px 0;
+#about-text {
+  margin: 25px 0;
 }
 
 .song-card {
-    margin: 25px 0;
-    display: flex;
+  margin: 25px;
+  display: flex;
 }
 
 #text-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 25px;
-    margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin-left: 50px;
+  margin-top: 32px;
+  width: 320px;
+}
+
+.song-containers {
+  display: flex;
 }
